--- a/Battlesheep/.vscode/settings.json
+++ b/Battlesheep/.vscode/settings.json
@@ -3,6 +3,9 @@
         "iostream": "cpp",
         "array": "cpp",
         "initializer_list": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cstdlib": "cpp",
+        "thread": "cpp",
+        "system_error": "cpp"
     }
 }
